# Graphics-System

./: Application.cpp  Application.h  CMakeLists.txt  ResourceHolder.cpp  ResourceHolder.h  Scene.cpp  Scene.h  main.cpp
GraphicsItems/: ScreenButton.cpp  ScreenButton.h
GraphicsItems/include/: Entity.h  PhysicsEntity.h  ScreenButton.h  ScreenItem.h
GraphicsItems/src/: Entity.cpp  PhysicsEntity.cpp  ScreenButton.cpp  ScreenItem.cpp
Libraries/Tinyxml2/: tinyxml2.cpp
LogicItems/include/: Player.h
LogicItems/src/: Player.cpp
Scenes/include/: GameTestScene.h  MainMenuScene.h  Scene.h
Scenes/src/: GameTestScene.cpp  MainMenuScene.cpp  Scene.cpp
Tools/: TiledMap.cpp  TiledMap.h
Tools/include/: Application.h  Camera.h  CameraFollowController.h  Colliders.cpp  Colliders.h  Compression.h  ResourceHolder.h  SettingsHolder.h  Subscriber.h  TiledMap.h  Vector2.h
Tools/src/: Application.cpp  Camera.cpp  CameraFollowController.cpp  Colliders.cpp  Compression.cpp  ResourceHolder.cpp  SettingsHolder.cpp  Subscriber.cpp  TiledMap.cpp  Vector2.cpp
